fixed: proxy unaware of games in progress fixed: game size could be smaller than party size fixed: games with 1 player could be starteded fixed: players not getting frozen before game fixed: parties can now start games (would wait for a player to leave previously) fixed: previously closed servers wouldn't become available fixed: mobs interacting with world before the game starts fixed: players getting kicked for fly when frozen changed: improved BungeeConfiguration to not use a map changed: hunted can no longer grief hunters at the begging by placing / breaking blocks
IntelliJ format